--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   check-and-update:
     runs-on: ubuntu-latest
+    outputs:
+      has_changes: ${{ steps.check-changes.outputs.has_changes }}
     
     steps:
       - name: Checkout code
@@ -20,7 +22,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-          cache: 'npm'
+          cache: 'pnpm'
       
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
@@ -30,38 +32,41 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       
-      - name: Check for OpenAPI changes
-        id: check-changes
-        run: |
-          echo "Checking for OpenAPI specification changes..."
-          pnpm openapi:check
-          if [ $? -eq 1 ]; then
-            echo "Changes detected in OpenAPI spec"
-            echo "has_changes=true" >> $GITHUB_OUTPUT
-          else
-            echo "No changes detected in OpenAPI spec"
-            echo "has_changes=false" >> $GITHUB_OUTPUT
-          fi
-      
-      - name: Regenerate SDK (if changes detected)
-        if: steps.check-changes.outputs.has_changes == 'true'
+      - name: Regenerate SDK
         run: |
           echo "Regenerating SDK with latest OpenAPI specification..."
           pnpm openapi:rebuild
           pnpm build
           echo "SDK regenerated successfully"
       
-      - name: Test across Node versions
-        if: steps.check-changes.outputs.has_changes == 'true'
-        uses: ./.github/workflows/test-sdk.yml
-        with:
-          node-versions: '[18, 19, 20, 21, 22]'
-          upload-coverage: 'false'
-      
+      - name: Check for actual changes
+        id: check-changes
+        run: |
+          echo "Checking for actual file changes..."
+          if git diff --quiet; then
+            echo "No changes detected in generated files"
+            echo "has_changes=false" >> $GITHUB_OUTPUT
+          else
+            echo "Changes detected in generated files"
+            echo "has_changes=true" >> $GITHUB_OUTPUT
+            echo "Changed files:"
+            git diff --name-only
+          fi
+
+  test:
+    if: needs.check-and-update.outputs.has_changes == 'true'
+    uses: ./.github/workflows/test-sdk.yml
+    needs: check-and-update
+    with:
+      node-versions: '[18, 19, 20, 21, 22]'
+      upload-coverage: 'false'
+
   bump-version-and-publish:
-    if: steps.check-changes.outputs.has_changes == 'true'
+    if: needs.check-and-update.outputs.has_changes == 'true'
     runs-on: ubuntu-latest
-    needs: [check-and-update, test]
+    needs: check-and-update
+    outputs:
+      new_version: ${{ steps.bump-version.outputs.new_version }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -72,7 +77,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-          cache: 'npm'
+          cache: 'pnpm'
           registry-url: 'https://registry.npmjs.org'
       
       - name: Setup pnpm
@@ -96,7 +101,7 @@ jobs:
           echo "Current version: $CURRENT_VERSION"
           
           # Bump patch version
-          NEW_VERSION=$(npm version patch --no-git-tag-version)
+          NEW_VERSION=$(pnpm version patch --no-git-tag-version)
           echo "New version: $NEW_VERSION"
           echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
           
@@ -115,7 +120,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
   
   create-release:
-    if: steps.check-changes.outputs.has_changes == 'true'
+    if: needs.check-and-update.outputs.has_changes == 'true'
     runs-on: ubuntu-latest
     needs: bump-version-and-publish
     steps:
