--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,4 +12,4 @@ jobs:
     uses: ./.github/workflows/test-sdk.yml
     with:
       node-versions: '[18, 19, 20, 21, 22]'
-      upload-coverage: true 
+      upload-coverage: 'true'
