--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -119,7 +119,7 @@ jobs:
   create-release:
     if: needs.check-and-update.outputs.has_changes == 'true'
     runs-on: ubuntu-latest
-    needs: bump-version-and-publish
+    needs: [check-and-update, bump-version-and-publish]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
