--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -6,39 +6,55 @@ on:
     - cron: '0 2 * * *'
   workflow_dispatch: # Allow manual trigger
 
+concurrency:
+  group: auto-update-sdk-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   check-and-update:
     runs-on: ubuntu-latest
     outputs:
       has_changes: ${{ steps.check-changes.outputs.has_changes }}
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Need full history for version comparison
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-          cache: 'pnpm'
-      
+
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 10.8.1
-      
+
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - name: Setup pnpm cache
+        uses: actions/cache@v3
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
       - name: Install dependencies
         run: pnpm install
-      
+
       - name: Regenerate SDK
         run: |
           echo "Regenerating SDK with latest OpenAPI specification..."
           pnpm openapi:rebuild
           pnpm build
           echo "SDK regenerated successfully"
-      
+
       - name: Check for actual changes
         id: check-changes
         run: |
@@ -64,7 +80,7 @@ jobs:
   bump-version-and-publish:
     if: needs.check-and-update.outputs.has_changes == 'true'
     runs-on: ubuntu-latest
-    needs: check-and-update
+    needs: [check-and-update, test]
     outputs:
       new_version: ${{ steps.bump-version.outputs.new_version }}
     steps:
@@ -72,50 +88,62 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-          cache: 'pnpm'
           registry-url: 'https://registry.npmjs.org'
-      
+
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 10.8.1
-      
+
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - name: Setup pnpm cache
+        uses: actions/cache@v3
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
       - name: Install dependencies
         run: pnpm install
-      
+
       - name: Configure Git
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-      
+
       - name: Bump patch version
         id: bump-version
         run: |
           # Get current version
           CURRENT_VERSION=$(node -p "require('./package.json').version")
           echo "Current version: $CURRENT_VERSION"
-          
+
           # Bump patch version
           NEW_VERSION=$(pnpm version patch --no-git-tag-version)
           echo "New version: $NEW_VERSION"
           echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
-      
+
       - name: Commit and push changes
         run: |
           git add .
           git commit -m "chore: auto-update SDK to ${{ steps.bump-version.outputs.new_version }} [skip ci]"
           git push origin main
-      
+
       - name: Publish to npm
         run: pnpm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-  
+
   create-release:
     if: needs.check-and-update.outputs.has_changes == 'true'
     runs-on: ubuntu-latest
@@ -123,7 +151,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       - name: Create Release
         uses: actions/create-release@v1
         env:
@@ -133,13 +161,13 @@ jobs:
           release_name: Release ${{ needs.bump-version-and-publish.outputs.new_version }}
           body: |
             🤖 Auto-generated release
-            
+
             This release was automatically generated due to changes in the Meeting BaaS API specification.
-            
+
             ## Changes
             - Updated SDK to match latest API specification
             - All tests passing across Node.js versions 18, 19, 20, 21, and 22
-            
+
             ## Testing
             - ✅ Node.js 18
             - ✅ Node.js 19
@@ -147,4 +175,4 @@ jobs:
             - ✅ Node.js 21
             - ✅ Node.js 22
           draft: false
-          prerelease: false 
+          prerelease: false
