--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "README.md",
     "LICENSE"
   ],
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "clean": "rm -rf dist",
     "build": "tsup",
