--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -57,14 +57,29 @@ jobs:
         id: check-changes
         run: |
           echo "Checking for actual file changes..."
-          if git diff --quiet; then
+          
+          # Get all changed files
+          CHANGED_FILES=$(git diff --name-only)
+          
+          if [ -z "$CHANGED_FILES" ]; then
             echo "No changes detected in generated files"
             echo "has_changes=false" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+          
+          echo "Changed files:"
+          echo "$CHANGED_FILES"
+          
+          # Filter out webhook files since they are purely documentation and shouldn't trigger a new release
+          FILTERED_CHANGES=$(echo "$CHANGED_FILES" | grep -v "src/generated/api/webhooks/" || true)
+          
+          if [ -z "$FILTERED_CHANGES" ]; then
+            echo "Only webhook documentation changes detected - ignoring"
+            echo "has_changes=false" >> $GITHUB_OUTPUT
           else
-            echo "Changes detected in generated files"
+            echo "API schema changes detected:"
+            echo "$FILTERED_CHANGES"
             echo "has_changes=true" >> $GITHUB_OUTPUT
-            echo "Changed files:"
-            git diff --name-only
           fi
 
   test:
