--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -57,22 +57,22 @@ jobs:
         id: check-changes
         run: |
           echo "Checking for actual file changes..."
-          
+
           # Get all changed files
           CHANGED_FILES=$(git diff --name-only)
-          
+
           if [ -z "$CHANGED_FILES" ]; then
             echo "No changes detected in generated files"
             echo "has_changes=false" >> $GITHUB_OUTPUT
             exit 0
           fi
-          
+
           echo "Changed files:"
           echo "$CHANGED_FILES"
-          
+
           # Filter out webhook files since they are purely documentation and shouldn't trigger a new release
           FILTERED_CHANGES=$(echo "$CHANGED_FILES" | grep -v "src/generated/api/webhooks/" || true)
-          
+
           if [ -z "$FILTERED_CHANGES" ]; then
             echo "Only webhook documentation changes detected - ignoring"
             echo "has_changes=false" >> $GITHUB_OUTPUT
@@ -168,12 +168,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Create Release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ needs.bump-version-and-publish.outputs.new_version }}
-          release_name: Release ${{ needs.bump-version-and-publish.outputs.new_version }}
+          name: Release ${{ needs.bump-version-and-publish.outputs.new_version }}
           body: |
             🤖 Auto-generated release
 
