feat: use typedoc and config to generate API methods and types in markdown

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ pnpm-debug.log*
 Thumbs.db
 
 # Test coverage
-coverage/ 
+coverage/
 # Temporary files
 tmp/
+
+# Generated documentation
+docs/generated/
