--- a/package.json
+++ b/package.json
@@ -41,6 +41,11 @@
     "openapi:generate:v2": "pnpm openapi:clean:v2 && orval --config orval.config.ts baasApiV2 baasZodV2",
     "openapi:rebuild": "pnpm openapi:generate && pnpm build",
     "openapi:rebuild:v2": "pnpm openapi:generate:v2 && pnpm build",
+    "docs:clean": "rm -rf docs/generated",
+    "docs:generate": "pnpm docs:clean && pnpm docs:generate:v1 && pnpm docs:generate:v2 && pnpm docs:generate:client",
+    "docs:generate:client": "typedoc --options typedoc.config.mjs",
+    "docs:generate:v1": "typedoc --options typedoc.v1.config.mjs",
+    "docs:generate:v2": "typedoc --options typedoc.v2.config.mjs",
     "prepublishOnly": "pnpm lint:fix && pnpm build"
   },
   "publishConfig": {
@@ -79,6 +84,8 @@
     "orval": "^7.9.0",
     "ts-node": "10.9.2",
     "tsup": "8.4.0",
+    "typedoc": "^0.28.15",
+    "typedoc-plugin-markdown": "^4.9.0",
     "typescript": "5.8.2",
     "vitest": "^2.1.8"
   },
