docs: add documentation and tests for code generation fixes
Added comprehensive documentation and testing infrastructure:

- ORVAL_KNOWN_ISSUES.md: Documents all known Orval bugs and workarounds
- scripts/test-fixer.js: Test suite for generation fixer
- package.json: Added 'pnpm test:fixer' command

This helps future maintainers understand:
- Why fixes are needed
- Which issues to report upstream
- How to verify fixes work correctly
- Trade-offs of different solutions

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "test:unit": "vitest run test/unit/",
     "test:integration": "vitest run test/integration/",
     "test:error-handling": "vitest run test/error-handling.test.ts",
+    "test:fixer": "node scripts/test-fixer.js",
     "openapi:fix-specs": "node scripts/fix-openai-spec.js && node scripts/fix-speechmatics-spec.js",
     "openapi:clean": "rm -rf src/generated",
     "openapi:clean:gladia": "rm -rf src/generated/gladia",
