--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -100,6 +100,9 @@ jobs:
     if: needs.check-and-update.outputs.has_changes == 'true'
     runs-on: ubuntu-latest
     needs: [check-and-update, test]
+    permissions:
+      id-token: write  # Required for OIDC with npm trusted publishing
+      contents: read   # Required for checkout
     outputs:
       new_version: ${{ steps.bump-version.outputs.new_version }}
     steps:
@@ -162,8 +165,6 @@ jobs:
 
       - name: Publish to npm
         run: pnpm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   create-release:
     if: needs.check-and-update.outputs.has_changes == 'true'
